--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<nav class="navbar navbar-default">
 			  	<ul class="nav navbar-nav">
 			        <li role="presentation" class="active"><a href="index.html">Om </a></li>
-			        <li eole="presentation" ><a href="portfolio.html">Portfolio </a></li>
+			        <li eole="presentation" ><a href="">Portfolio </a></li>
 			        <li role="presentation" ><a href="kontakt.html">Kontakt</a></li>
 			     </ul>
 			</nav>
