--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<nav class="navbar navbar-default">
 			  	<ul class="nav navbar-nav">
 			        <li role="presentation" class="active"><a href="index.html">Om </a></li>
-			        <li eole="presentation" ><a href="">Portfolio </a></li>
+			        <li eole="presentation" ><a href="portfolio.html">Portfolio </a></li>
 			        <li role="presentation" ><a href="kontakt.html">Kontakt</a></li>
 			     </ul>
 			</nav>
@@ -34,7 +34,7 @@
 			<div class="col-md-4">
 				<div class="jumbotron">
 				<h2>Maria Lundqvist</h2>
-					<p> Jag läser andra året Webbdesign på Högskolan i Halmstad och tar högskoleexamen nu till sommaren 2016. Webbutveckling är något jag brinner för och jag tycker både frontend- och backend- utvackling är väldigt intressant. Att få kombinera mina intresse för design och programmering i yrkeslivet är något jag drömmer om. </p>
+					<p> Jag läser sista året Webbdesign på Högskolan i Halmstad och tar högskoleexamen nu till sommaren. Webbutveckling är något jag brinner för och jag tycker både frontend- och backend- utveckling är väldigt intressant. Att få kombinera mitt intresse för design och programmering i yrkeslivet är något jag drömmer om. </p>
 				</div>
 			</div>
 	</div>	
