--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Maria Lundqvist</title>
@@ -10,6 +10,7 @@
       <!-- Latest compiled and minified JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
       <link rel="stylesheet" type="text/css" href="css/main.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta charset="utf-8">
 </head>
 <body>
@@ -24,20 +25,29 @@
 			     </ul>
 			</nav>
 		</div>
-		<div class="row">
-			<div class="col-md-4">
+
 				<img src="img/profilbild.png" class="circular" alt="Profilbild">
-			</div>
-		</div>
 	</div>
-	<div class="row">
-			<div class="col-md-4">
+	
 				<div class="jumbotron">
 				<h2>Maria Lundqvist</h2>
 					<p> Jag läser sista året Webbdesign på Högskolan i Halmstad och tar högskoleexamen nu till sommaren. Webbutveckling är något jag brinner för och jag tycker både frontend- och backend- utveckling är väldigt intressant. Att få kombinera mitt intresse för design och programmering i yrkeslivet är något jag drömmer om. </p>
 				</div>
+	<div class="skills">
+	<div class="row">
+			
+			<div class="col-md-4">
+			<img src="img/html.png" >
 			</div>
-	</div>	
+			<div class="col-md-4">
+			<img src="img/html.png" >
+			</div>
+			<div class="col-md-4">
+			<img src="img/html.png" >
+			</div>
+		
+	</div>
+	</div>				
 </div>
 </body>
 </html>
