--- a/index.html
+++ b/index.html
@@ -37,16 +37,34 @@
 	<div class="row">
 			
 			<div class="col-md-4">
-			<img src="img/html.png" >
+			<span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+			<h4>Adobe Creative Suite</h4>
+			<p>Mycket goda kunskaper i programmen Photoshop, Illustrator, InDesign, Flash, Dreamweaver och Premiere Pro.</p>
 			</div>
 			<div class="col-md-4">
-			<img src="img/html.png" >
+			<span class="glyphicons glyphicons-display"></span>
+			<h4>HTML5 & CSS</h4>
+			<p>Mycket goda kunskaper i programmeting av HTML & CSS. Och responsiv design.</p>
 			</div>
 			<div class="col-md-4">
-			<img src="img/html.png" >
+			<span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
+			<p>Databasdesign sql</p>
 			</div>
-		
-	</div>
+		</div>
+	<div class="row">
+		<div class="col-md-4">
+			<span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
+			<p>Databasdesign sql</p>
+		</div>
+		<div class="col-md-4">
+			<span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
+			<p>Databasdesign sql</p>
+		</div>
+		<div class="col-md-4">
+			<span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
+			<p>Databasdesign sql</p>
+			</div>
+	</div>	
 	</div>				
 </div>
 </body>
