--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <meta charset="utf-8">
 </head>
 <body>
-<div class="container">
+<div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
 			<nav class="navbar navbar-default">
@@ -34,37 +34,69 @@
 					<p> Jag läser sista året Webbdesign på Högskolan i Halmstad och tar högskoleexamen nu till sommaren. Webbutveckling är något jag brinner för och jag tycker både frontend- och backend- utveckling är väldigt intressant. Att få kombinera mitt intresse för design och programmering i yrkeslivet är något jag drömmer om. </p>
 				</div>
 	<div class="skills">
-	<div class="row">
-			
+	
+		<div class="row">
 			<div class="col-md-4">
-			<span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
-			<h4>Adobe Creative Suite</h4>
-			<p>Mycket goda kunskaper i programmen Photoshop, Illustrator, InDesign, Flash, Dreamweaver och Premiere Pro.</p>
+			<div class="col-md-6">
+				<span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
 			</div>
-			<div class="col-md-4">
-			<span class="glyphicons glyphicons-display"></span>
-			<h4>HTML5 & CSS</h4>
-			<p>Mycket goda kunskaper i programmeting av HTML & CSS. Och responsiv design.</p>
+			<div class="col-md-6">
+				<h4>Adobe Creative Suite</h4>
+				<p>Mycket goda kunskaper i programmen Photoshop, Illustrator, InDesign, Flash, Dreamweaver och Premiere Pro.</p>
 			</div>
+			</div>
+				<div class="col-md-4">
+			<div class="col-md-6">
+				<span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+			</div>
+			<div class="col-md-6">
+				<h4>Adobe Creative Suite</h4>
+				<p>Mycket goda kunskaper i programmen Photoshop, Illustrator, InDesign, Flash, Dreamweaver och Premiere Pro.</p>
+			</div>
+			</div>
+
 			<div class="col-md-4">
-			<span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
-			<p>Databasdesign sql</p>
+			<div class="col-md-6">
+				<span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+			</div>
+			<div class="col-md-6">
+				<h4>Adobe Creative Suite</h4>
+				<p>Mycket goda kunskaper i programmen Photoshop, Illustrator, InDesign, Flash, Dreamweaver och Premiere Pro.</p>
+			</div>
+			</div>
+		</div>	
+		
+		<div class="row">
+			<div class="col-md-4">
+			<div class="col-md-6">
+				<span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+			</div>
+			<div class="col-md-6">
+				<h4>Adobe Creative Suite</h4>
+				<p>Mycket goda kunskaper i programmen Photoshop, Illustrator, InDesign, Flash, Dreamweaver och Premiere Pro.</p>
+			</div>
+			</div>
+				<div class="col-md-4">
+			<div class="col-md-6">
+				<span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+			</div>
+			<div class="col-md-6">
+				<h4>Adobe Creative Suite</h4>
+				<p>Mycket goda kunskaper i programmen Photoshop, Illustrator, InDesign, Flash, Dreamweaver och Premiere Pro.</p>
+			</div>
+			</div>
+
+			<div class="col-md-4">
+			<div class="col-md-6">
+				<span class="glyphicon glyphicon-picture" aria-hidden="true"></span>
+			</div>
+			<div class="col-md-6">
+				<h4>Adobe Creative Suite</h4>
+				<p>Mycket goda kunskaper i programmen Photoshop, Illustrator, InDesign, Flash, Dreamweaver och Premiere Pro.</p>
+			</div>
 			</div>
 		</div>
-	<div class="row">
-		<div class="col-md-4">
-			<span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
-			<p>Databasdesign sql</p>
-		</div>
-		<div class="col-md-4">
-			<span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
-			<p>Databasdesign sql</p>
-		</div>
-		<div class="col-md-4">
-			<span class="glyphicon glyphicon-hdd" aria-hidden="true"></span>
-			<p>Databasdesign sql</p>
-			</div>
-	</div>	
+
 	</div>				
 </div>
 </body>
