--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                   <div class="icon"><span class="glyphicon glyphicon-hdd" aria-hidden="true"></span></div>
                   <div class="text">
                      <h4>Databasdesign</h4>
-                     <p>Mycket goda kunskaper av databasdesign och av språket SQL. Jag är bekant med databashanteringsprogrammen MySQL och phpMyAdmin.</p>
+                     <p>Mycket goda kunskaper av databasdesign och av språket SQL. Jag har erfarenhet av programmet MySQL.</p>
                   </div>
                </div>
             </div>
@@ -167,8 +167,8 @@
                   <div class="col-sm-6">
                      <h3>Törstig Vampyr</h3>
                      <b>Om</b>
-                     <p>Törsdig Vampyr är ett spel som har skapats i Flash. Dataspelet går ut på att spelaren är en vampyr som heter Dracula som är väldigt
-                        törstig, och med hjälp av piltangenterna ska spelaren fånga fallande bloddroppar och få päng. Det gäller
+                     <p>Törsdig Vampyr är ett spel som har skapats i Flash. Dataspelet går ut på att spelaren är en vampyr som heter Dracula, och han är väldigt
+                        törstig. Med hjälp av piltangenterna ska spelaren fånga fallande bloddroppar och få päng. Det gäller
                         även att undvika fallande vitlökar, då de gör så att Dracula förlorar liv om han träffas.
                      </p>
                      <b>Lärdomar</b>
